--- a/UniMeet/public/profile.html
+++ b/UniMeet/public/profile.html
@@ -28,7 +28,7 @@
             <div class="form-row profile-row">
                 <div class="col-md-4 relative">
                     <div class="avatar">
-                        <div class="avatar-bg center"></div>
+                        <div id="profilePicture" class="avatar-bg center"></div>
                     </div>
                     <h4 id="nameOutput" class="text-capitalize text-center">John Smith</h4>
                     <h6 id="universityOutput" class="text-center text-secondary">RMIT University</h6>
@@ -66,7 +66,7 @@
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <script src="scripts/Profile-Edit-Form.js"></script>
 
-    <script src="scripts/profile.js?8"></script>
+    <script src="scripts/profile.js?10"></script>
 </body>
 
 </html>
