Pulling matched users

--- a/UniMeet/public/matching.html
+++ b/UniMeet/public/matching.html
@@ -37,7 +37,9 @@
   </div>
 </nav>-->
 	
-	<nav class="navBar">hello</nav>
+	<nav class="navBar">
+		<div class="nav_profile">POOOOOOOOOOP</div>
+	</nav>
 	
 	<section class="mainView">
 	
