--- a/UniMeet/public/matching.html
+++ b/UniMeet/public/matching.html
@@ -38,7 +38,7 @@
 </nav>-->
 	
 	<nav class="navBar">
-		<div class="nav_profile">POOOOOOOOOOP</div>
+		<div class="nav_profile"></div>
 	</nav>
 	
 	<section class="mainView">
