--- a/UniMeet/public/matching.html
+++ b/UniMeet/public/matching.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Bootstrap Agency Page Template</title>
+<title>uniMeet - Matching Portal</title>
 	
 	<!-- FIREBASE -->
 	<script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
@@ -199,7 +199,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12">
-        <p>Copyright © MyWebsite. All rights reserved.</p>
+        <p>Copyright ©2018 Cloudy Dev. All rights reserved.</p>
       </div>
     </div>
   </div>
