Login google fix / signout working

--- a/UniMeet/public/matching.html
+++ b/UniMeet/public/matching.html
@@ -4,23 +4,13 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<<<<<<< HEAD
-<title>Bootstrap Agency Page Template</title>
 
 <!-- FIREBASE -->
 <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-firestore.js"></script>
 <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-auth.js"></script>
-
-=======
 <title>uniMeet - Matching Portal</title>
-	
-	<!-- FIREBASE -->
-	<script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-auth.js"></script>
-	
->>>>>>> 33c7e90036deda244d07aa6f51e874d4d76a9ef1
+
 <!-- Bootstrap -->
 <link href="css/bootstrap-4.0.0.css" rel="stylesheet">
 <link href="styles/navigation.css" rel="stylesheet">
@@ -49,15 +39,14 @@
 </nav>-->
 
 <nav class="navBar">
-  <div class="nav_profile"> 
-	  <img id="nav_profile_image" class="nav_profile_image" src="images/white_profile_placeholder.png"/> 
-    <h3 ID="nav_profile_title" class="nav_profile_title" href="#">Profile</h3>
+  <div class="nav_profile"> <img id="nav_profile_image" class="nav_profile_image" src="images/white_profile_placeholder.png" alt="Profile Image"/>
+    <h3 id="nav_profile_title" class="nav_profile_title">Profile</h3>
     <div class="nav_separator_Line"></div>
     <ul>
-      <li><a href="#" class="nav_menu_items">My Matches</a></li>
-      <li><a href="#" class="nav_menu_items">Favourites</a></li>
-      <li><a href="#" class="nav_menu_items">Messages</a></li>
-      <li><a href="#" class="nav_menu_items">Logout</a></li>
+      <li><a href="/matching.html">Home</a></li>
+      <li><a href="#">News</a></li>
+      <li><a href="/messaging.html">Contact</a></li>
+      <li><a href="about.asp">About</a></li>
     </ul>
   </div>
 </nav>
@@ -230,8 +219,8 @@
 <!-- Include all compiled plugins (below), or include individual files as needed --> 
 <script src="js/popper.min.js"></script> 
 <script src="js/bootstrap-4.0.0.js"></script> 
-<script src="scripts/matching.js"></script>
-	<script src="scripts/navigation.js"></script>
+<script src="scripts/matching.js"></script> 
+<script src="scripts/navigation.js"></script>
 </section>
 </body>
 </html>
