--- a/UniMeet/public/index.html
+++ b/UniMeet/public/index.html
@@ -1,35 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Login</title>
-<link href="styles/index.css" rel="stylesheet">
-</head>
+  <title>uniMeet</title>
 
-<body>
-<div class="view_panel"></div>
-<div class="login_panel">
-  <form>
-    <div class="login_form">
-		<h1 class="login_title">Welcome to uniMeet.</h1>
-      <input type="email" class="form_field" id="email" name="email" placeholder="Email">
-      <input type="password" class="form_field" id="password" name="password" placeholder="Password">
-      <button type="submit" id="loginBtn" class="form_login_btn">Login</button>
-		<button type="submit" id="loginGoogleBtn" class="form_login_google_btn">Login with Google</button>
-    </div>
-    <!--
-  <button type="submit" id="feedbackSubmit" class="btn btn-primary btn-lg">Login</button>
-  <button type="submit" id="feedbackSubmit" class="btn btn-primary btn-lg">Login with Google</button>
--->
-  </form>
-</div>
-		<script src="/__/firebase/5.1.0/firebase-app.js"></script>
-<script src="/__/firebase/5.1.0/firebase-auth.js"></script>
-<script src="/__/firebase/5.1.0/firebase-database.js"></script>
-<script src="/__/firebase/5.1.0/firebase-storage.js"></script>
-<script src="/__/firebase/5.1.0/firebase-messaging.js"></script>
-<script src="/__/firebase/init.js"></script>
-	<script src="scripts/index.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
+<script src="scripts/index.js"></script>
+
+  <script src="/__/firebase/5.0.0/firebase-app.js"></script>
+  <script src="/__/firebase/5.0.0/firebase-auth.js"></script>
+  <script src="/__/firebase/init.js"></script>
 	
+</head>
+<body>
 </body>
 </html>
