--- a/UniMeet/public/matching.html
+++ b/UniMeet/public/matching.html
@@ -39,16 +39,17 @@
 </nav>-->
 
 <nav class="navBar">
-  <div class="nav_profile"> <img id="nav_profile_image" class="nav_profile_image" src="images/white_profile_placeholder.png" alt="Profile Image"/>
+  <div id="navProfileBtn" class="nav_profile"> 
+      <img id="nav_profile_image" class="nav_profile_image" src="images/white_profile_placeholder.png" alt="Profile Image"/>
     <h3 id="nav_profile_title" class="nav_profile_title">Profile</h3>
-    <div class="nav_separator_Line"></div>
-    <ul>
-      <li><a href="/matching.html">Home</a></li>
-      <li><a href="#">News</a></li>
-      <li><a href="/messaging.html">Contact</a></li>
-      <li><a href="about.asp">About</a></li>
-    </ul>
   </div>
+  <div class="nav_separator_Line"></div>
+  <ul>
+    <li><a href="/matching.html">My Matches</a></li>
+    <li><a href="#">Favourites</a></li>
+    <li><a href="/messaging.html">Messages</a></li>
+    <li><a href="" id="logoutBtn">Logout</a></li>
+  </ul>
 </nav>
 <section class="mainView">
 <section>
