--- a/UniMeet/public/login.html
+++ b/UniMeet/public/login.html
@@ -13,11 +13,13 @@
 	
 </head>
 <body>
-<div class="view_panel"></div>
+<div class="view_panel">
+	<div class="header_image"></div>
+	</div>
 <div class="login_panel">
-<form>
     <div class="login_form">
 <!--		<img class="logo" src="images/purple_profile_placeholder.png"/>-->
+		<h3 class="uniMeet_title">uniMeet.</h3>
       <h1 class="login_title">Find like-minded people.</h1>
       <input type="email" class="form_field" id="email" name="email" placeholder="Email">
       <input type="password" class="form_field" id="password" name="password" placeholder="Password">
@@ -25,7 +27,7 @@
           <button class="form_login_google_btn" id="quickstart-sign-in">Sign in with Google</button>
           
 	</div>
-  </form>
+	<button type="submit" id="signupBtn" class="form_signup_btn">Don't have an account? <b>Sign up</b> here.</button>
 </div>
 
       
