passing data from matching to profile page

--- a/UniMeet/public/user_profile.html
+++ b/UniMeet/public/user_profile.html
@@ -31,12 +31,11 @@
 <div class="user_profile_detail">
   <div class="main_view">
     <h2 class="subHeader">About</h2>
+    <h5 class="bodyText">Lorem ipsum dolor sit amet, quidam efficiendi cu qui, ius id justo vulputate. An iisque ponderum dissentiet vis. Pri ne summo mentitum evertitur. Duo elit debet ex. Essent diceret aliquando ne duo, eu sea quis decore essent, feugiat dignissim repudiandae nam no.</h5>
+	  <br>
 	  <h3 class="bodyText lightTextColour">Age: 21 years old</h3>
 	  <h3 class="bodyText lightTextColour">University: RMIT University</h3>
 	  <h3 class="bodyText lightTextColour">Year: 3</h3>
-    <h5 class="bodyText">Lorem ipsum dolor sit amet, quidam efficiendi cu qui, ius id justo vulputate. An iisque ponderum dissentiet vis. Pri ne summo mentitum evertitur. Duo elit debet ex. Essent diceret aliquando ne duo, eu sea quis decore essent, feugiat dignissim repudiandae nam no.<br>
-      <br>
-      Autem eirmod accommodare ius ad, scripta salutandi urbanitas eum ad. Sumo illum per ei, pri id mutat clita, mel oblique ornatus ea. Ullum liber honestatis in quo, te movet invenire usu. Ea pro animal option imperdiet. Quo iuvaret dolorem ea, sit copiosae accommodare in, altera essent expetendis his an. Te pro etiam nihil intellegat.</h5>
     <h2 class="subHeader">Enrolled Courses</h2>
     <div id="enrolledCoursesCollectionView" class="row"></div>
     <h2 class="subHeader">Contact</h2>
