Updated firebase version to make consistent, removed duplicate code that caused delay/errors
Also added the background image to hosting and made the file size much smaller to increase speed.

--- a/UniMeet/public/login.html
+++ b/UniMeet/public/login.html
@@ -3,13 +3,14 @@
 <head>
   <title>uniMeet Login</title>
 
-<script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
-<script src="scripts/login.js"></script>
-  <link rel="stylesheet" href="styles/login.css">
+    <!-- Firebase -->
+    <script src="/__/firebase/5.4.0/firebase-app.js"></script>
+    <script src="/__/firebase/5.4.0/firebase-auth.js"></script>
+    <script src="/__/firebase/init.js"></script>
+    <!-- Firebase -->
 
-  <script src="/__/firebase/5.0.0/firebase-app.js"></script>
-  <script src="/__/firebase/5.0.0/firebase-auth.js"></script>
-  <script src="/__/firebase/init.js"></script>
+    <script src="scripts/login.js"></script>
+    <link rel="stylesheet" href="styles/login.css">
 	
 </head>
 <body>
