--- a/UniMeet/public/user_profile.html
+++ b/UniMeet/public/user_profile.html
@@ -5,9 +5,12 @@
 <title>Untitled Document</title>
 
 <!-- FIREBASE -->
-<script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-firestore.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-auth.js"></script>
+<script src="/__/firebase/5.4.0/firebase-app.js"></script>
+<script src="/__/firebase/5.4.0/firebase-auth.js"></script>
+<script src="/__/firebase/5.4.0/firebase-firestore.js"></script>
+<script src="/__/firebase/init.js"></script>
+<!-- FIREBASE -->
+
 <script src="scripts/user_profile.js"></script>
 <link href="css/bootstrap-4.0.0.css" rel="stylesheet">
 <link rel="stylesheet" href="styles/main.css">
