--- a/UniMeet/public/index.html
+++ b/UniMeet/public/index.html
@@ -3,12 +3,14 @@
 <head>
   <title>uniMeet</title>
 
-<script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
-<script src="scripts/index.js"></script>
+    <!-- FIREBASE -->
+    <script src="/__/firebase/5.4.0/firebase-app.js"></script>
+    <script src="/__/firebase/5.4.0/firebase-auth.js"></script>
+    <script src="/__/firebase/init.js"></script>
+    <!-- FIREBASE -->
 
-  <script src="/__/firebase/5.0.0/firebase-app.js"></script>
-  <script src="/__/firebase/5.0.0/firebase-auth.js"></script>
-  <script src="/__/firebase/init.js"></script>
+	<script src="scripts/index.js"></script>
+	
 	
 </head>
 <body>
