--- a/UniMeet/public/matching.html
+++ b/UniMeet/public/matching.html
@@ -6,9 +6,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- FIREBASE -->
-<script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-firestore.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-auth.js"></script>
+<script src="/__/firebase/5.4.0/firebase-app.js"></script>
+<script src="/__/firebase/5.4.0/firebase-auth.js"></script>
+<script src="/__/firebase/5.4.0/firebase-firestore.js"></script>
+<script src="/__/firebase/init.js"></script>
+<!-- FIREBASE -->
+
 <title>uniMeet - Matching Portal</title>
 
 <!-- Bootstrap -->
