--- a/UniMeet/public/profile.html
+++ b/UniMeet/public/profile.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile</title>
 
-    <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-firestore.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-auth.js"></script>
+    <!-- FIREBASE -->
+    <script src="/__/firebase/5.4.0/firebase-app.js"></script>
+    <script src="/__/firebase/5.4.0/firebase-auth.js"></script>
+    <script src="/__/firebase/5.4.0/firebase-firestore.js"></script>
+    <script src="/__/firebase/init.js"></script>
+    <!-- FIREBASE -->
 
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/Profile-Edit-Form.css">
