--- a/UniMeet/public/login.html
+++ b/UniMeet/public/login.html
@@ -3,13 +3,12 @@
 <head>
   <title>uniMeet Login</title>
 
-    <!-- Firebase -->
+    <!-- FIREBASE -->
     <script src="/__/firebase/5.4.0/firebase-app.js"></script>
     <script src="/__/firebase/5.4.0/firebase-auth.js"></script>
     <script src="/__/firebase/init.js"></script>
-    <!-- Firebase -->
+    <!-- FIREBASE -->
 
-    <script src="scripts/login.js"></script>
     <link rel="stylesheet" href="styles/login.css">
 	
 </head>
@@ -21,10 +20,13 @@
     <div class="login_form">
 		<h3 class="uniMeet_title">uniMeet.</h3>
       <h1 class="login_title">Find like-minded people.</h1>
-      <input type="email" class="form_field" id="email" name="email" placeholder="Email">
-      <input type="password" class="form_field" id="password" name="password" placeholder="Password">
-          <button type="submit" id="loginBtn" class="form_login_btn">Login</button>
-          <button class="form_login_google_btn" id="quickstart-sign-in">Sign in with Google</button>
+
+    <form id="loginForm" onsubmit="return false;" method="post">
+      <input type="email" class="form_field" id="email" name="email" placeholder="Email" required>
+      <input type="password" class="form_field" id="password" name="password" placeholder="Password" required>
+      <button id="loginButton" class="form_login_btn" type="submit" >Sign in</button>
+    </form>          
+    <button class="form_login_google_btn" id="quickstart-sign-in">Sign in with Google</button>
           
 	</div>
 	<button type="submit" id="signupBtn" class="form_signup_btn">Don't have an account? <b>Sign up</b> here.</button>
@@ -32,6 +34,6 @@
 
       
 
-
+  <script src="scripts/login.js?2"></script>
 </body>
 </html>
