--- a/UniMeet/public/register.html
+++ b/UniMeet/public/register.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="styles/register.css">
-<title>Untitled Document</title>
+<title>Sign Up</title>
 </head>
 
 <body>
