--- a/UniMeet/public/register.html
+++ b/UniMeet/public/register.html
@@ -18,21 +18,21 @@
 <div class="signup_panel">
   <div class="login_form">
     <h3 class="sml_title">uniMeet.</h3>
-    <h1 class="large_title">Sign Up</h1>
+    <h1 class="large_title"><b>Create</b> an account.</h1>
     <form id="signUpForm" onsubmit="return false;" method="post">
       <input type="email" class="form_field" id="email" name="email" placeholder="Email" required>
       <input type="password" class="form_field" id="password" name="password" placeholder="Password" required>
-      <input type="password" class="form_field" id="confirmPassword" name="confirmPassword" placeholder="Confirm Password" required>
+      <input type="password" class="form_field" id="confirmPassword" name="confirmPassword" placeholder="Password (repeat)" required>
       <div class="warning" id="warning"></div>
-      <button id="signUpButton" class="form_login_btn" type="submit">Sign up</button>
+      <button id="signUpButton" class="form_login_btn" type="submit">Sign Up</button>
     </form>
 
     <button class="form_login_google_btn" id="quickstart-sign-in">Sign up with Google</button>
   </div>
 </div>
 <div class="view_panel">
-	<div class="header_image"></div>
-	</div>
+  <div class="header_image"></div>
+  </div>
 
   <script src="scripts/jquery.min.js"></script>
   <script src="scripts/register.js?9"></script>
