Load list of subjects

--- a/UniMeet/public/setup.html
+++ b/UniMeet/public/setup.html
@@ -36,16 +36,16 @@
     </div>
     <div class="tab">What subjects are you currently taking?
       <p><select id="subject1" oninput="this.className = ''" name="subject1">
-        <option value="" hidden>Subject 1</option>
+        <option value="" hidden> -Please select your subject-</option>
       </select></p>
       <p><select id="subject2" oninput="this.className = ''" name="subject2">
-        <option value="" hidden>Subject 2</option>
+        <option value="" hidden> -Please select your subject-</option>
       </select></p>
       <p><select id="subject3" oninput="this.className = ''" name="subject3">
-        <option value="" hidden>Subject 3</option>
+        <option value="" hidden> -Please select your subject-</option>
       </select></p>
-      <p><select id="subject3" oninput="this.className = ''" name="subject4">
-        <option value="" hidden>Subject 4</option>
+      <p><select id="subject4" oninput="this.className = ''" name="subject4">
+        <option value="" hidden> -Please select your subject-</option>
       </select></p>
     </div>
     <div class="tab">What are your interests?
