Checking for updates to match list in real time. Refresh button to retrieve new matches. Some fade effects to look cleaner
Nice

--- a/UniMeet/public/matching.html
+++ b/UniMeet/public/matching.html
@@ -60,11 +60,12 @@
   <div class="row">
     <div class="col-lg-12 mb-5 mt-5 text-left">
       <h1 class="headerText">My Matches</h1>
+      <input type="button" class="refresh_button" id="refreshButton" value="Refresh" disabled>
     </div>
   </div>
 </div>
 <div class="container">
-<div id="matchedCollectionView" class="row"> 
+<div id="matchedCollectionView" class="row" style="display: none"> 
   <!-- <div class="col-lg-4 col-md-6 col-sm-12 text-center">
             <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="images/140X140.gif" data-holder-rendered="true">
             <h3>Lorem ipsum</h3>
