user profile updates

--- a/UniMeet/public/favourites.html
+++ b/UniMeet/public/favourites.html
@@ -59,7 +59,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-12 mb-5 mt-5 text-left">
-      <h1 class="headerText">My Matches</h1>
+      <h1 class="headerText">Favourites</h1>
       <input type="button" class="refresh_button" id="refreshButton" value="Refresh" disabled>
     </div>
   </div>
@@ -224,7 +224,7 @@
 <!-- Include all compiled plugins (below), or include individual files as needed --> 
 <script src="js/popper.min.js"></script> 
 <script src="js/bootstrap-4.0.0.js"></script> 
-<script src="scripts/matching.js"></script> 
+<script src="scripts/favourites.js"></script> 
 <script src="scripts/navigation.js"></script>
 </section>
 </body>
