--- a/UniMeet/public/user_profile.html
+++ b/UniMeet/public/user_profile.html
@@ -25,31 +25,31 @@
   <h2 id="universityOutput" class="profile_smallTitle">Bachelor of Information Technology</h2>
   
   <div class="shortcut_container"> 
-	  <button class="button whiteBackground">Message</button>
-	  <button class="button whiteBackground">Favourite</button>
-	  <button class="button whiteBackground">More</button>
+	  <button class="button equalWidths whiteBackground">Message</button>
+	  <button id="favouriteBtn" class="button equalWidths whiteBackground">Favourite</button>
+	  <button class="button equalWidths whiteBackground">More</button>
 	</div>
 </div>
 	</div>
 <div class="user_profile_detail">
   <div class="main_view">
     <h2 class="subHeader">About</h2>
-    <h5 class="bodyText">Lorem ipsum dolor sit amet, quidam efficiendi cu qui, ius id justo vulputate. An iisque ponderum dissentiet vis. Pri ne summo mentitum evertitur. Duo elit debet ex. Essent diceret aliquando ne duo, eu sea quis decore essent, feugiat dignissim repudiandae nam no.</h5>
+    <h5 id="bioLabel" class="bodyText">Lorem ipsum dolor sit amet, quidam efficiendi cu qui, ius id justo vulputate. An iisque ponderum dissentiet vis. Pri ne summo mentitum evertitur. Duo elit debet ex. Essent diceret aliquando ne duo, eu sea quis decore essent, feugiat dignissim repudiandae nam no.</h5>
 	  <br>
-	  <h3 class="bodyText lightTextColour">Age: 21 years old</h3>
-	  <h3 class="bodyText lightTextColour">University: RMIT University</h3>
-	  <h3 class="bodyText lightTextColour">Year: 3</h3>
+	  <h3 id="ageLabel" class="bodyText lightTextColour">Age:</h3>
+	  <h3 id="uniLabel" class="bodyText lightTextColour">University:</h3>
+	  <h3 id="yearLabel" class="bodyText lightTextColour">Year:</h3>
     <h2 class="subHeader">Enrolled Courses</h2>
     <div id="enrolledCoursesCollectionView" class="row"></div>
     <h2 class="subHeader">Contact</h2>
 	  <h3 class="table_title primaryColour">Student Email</h3>
-	  <h3 class="bodyText">s3603887@student.rmit.edu.au</h3>
+	  <h3 id="studentEmail" class="bodyText">--</h3>
 	  <br>
 	  <h3 class="table_title primaryColour">Personal Email</h3>
-	  <h3 class="bodyText">personalemail@gmail.com</h3>
+	  <h3 id="personalEmail" class="bodyText">--</h3>
 	  <br>
 	  <h3 class="table_title primaryColour">Mobile</h3>
-	  <h3 class="bodyText">0412 345 678</h3>
+	  <h3 id="mobile" class="bodyText">--</h3>
 	  
 	  <h2 class="subHeader">Links</h2>
   </div>
