Display placeholder profile picture when none exists, Removed redundant Refresh from Favorites page to improve performance, Removed various redundant lines

--- a/UniMeet/public/user_profile.html
+++ b/UniMeet/public/user_profile.html
@@ -34,7 +34,7 @@
 <div class="user_profile_detail">
   <div class="main_view">
     <h2 class="subHeader">About</h2>
-    <h5 id="bioLabel" class="bodyText">Lorem ipsum dolor sit amet, quidam efficiendi cu qui, ius id justo vulputate. An iisque ponderum dissentiet vis. Pri ne summo mentitum evertitur. Duo elit debet ex. Essent diceret aliquando ne duo, eu sea quis decore essent, feugiat dignissim repudiandae nam no.</h5>
+    <h5 id="bioLabel" class="bodyText"></h5>
 	  <br>
 	  <h3 id="ageLabel" class="bodyText lightTextColour">Age:</h3>
 	  <h3 id="uniLabel" class="bodyText lightTextColour">University:</h3>
