--- a/UniMeet/public/favourites.html
+++ b/UniMeet/public/favourites.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- FIREBASE -->
-<script src="/__/firebase/5.4.0/firebase-app.js"></script>
-<script src="/__/firebase/5.4.0/firebase-auth.js"></script>
-<script src="/__/firebase/5.4.0/firebase-firestore.js"></script>
-<script src="/__/firebase/init.js"></script>
-<!-- FIREBASE -->
+  <!-- FIREBASE -->
+  <script src="/__/firebase/5.4.0/firebase-app.js"></script>
+  <script src="/__/firebase/5.4.0/firebase-auth.js"></script>
+  <script src="/__/firebase/5.4.0/firebase-firestore.js"></script>
+  <script src="/__/firebase/init.js"></script>
+  <!-- FIREBASE -->
 
-<title>uniMeet - Matching Portal</title>
+  <title>uniMeet - Matching Portal</title>
 
-<!-- Bootstrap -->
-<link href="css/bootstrap-4.0.0.css" rel="stylesheet">
-<link href="styles/navigation.css" rel="stylesheet">
-<link href="styles/matching.css" rel="stylesheet">
+  <!-- Bootstrap -->
+  <link href="css/bootstrap-4.0.0.css" rel="stylesheet">
+  <link href="styles/navigation.css" rel="stylesheet">
+  <link href="styles/matching.css" rel="stylesheet">
 </head>
 
 <body>
@@ -43,7 +43,7 @@
 
 <nav class="navBar">
   <div id="navProfileBtn" class="nav_profile"> 
-      <img id="nav_profile_image" class="nav_profile_image" src="images/white_profile_placeholder.png" alt="Profile Image"/>
+    <img id="nav_profile_image" class="nav_profile_image" src="images/white_profile_placeholder.png" alt="Profile Image"/>
     <h3 id="nav_profile_title" class="nav_profile_title">Profile</h3>
   </div>
   <div class="nav_separator_Line"></div>
@@ -55,177 +55,27 @@
   </ul>
 </nav>
 <section class="mainView">
-<section>
-<div class="container">
-  <div class="row">
-    <div class="col-lg-12 mb-5 mt-5 text-left">
-      <h1 class="headerText">Favourites</h1>
-      <input type="button" class="refresh_button" id="refreshButton" value="Refresh" disabled>
-    </div>
-  </div>
-</div>
-<div class="container">
-<div id="matchedCollectionView" class="row" style="display: none"> 
-  <!-- <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-            <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="images/140X140.gif" data-holder-rendered="true">
-            <h3>Lorem ipsum</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          </div>
-          <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-            <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="images/140X140.gif" data-holder-rendered="true">
-            <h3>Lorem ipsum dolor</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          </div>
-          <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-            <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="images/140X140.gif" data-holder-rendered="true">
-            <h3>Lorem ipsum dolor</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          </div>
-          <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-            <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="images/140X140.gif" data-holder-rendered="true">
-            <h3>Lorem ipsum</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          </div>
-          <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-            <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="images/140X140.gif" data-holder-rendered="true">
-            <h3>Lorem ipsum dolor</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          </div>
-          <div class="col-lg-4 col-md-6 col-sm-12 text-center">
-            <img class="rounded-circle" alt="140x140" style="width: 140px; height: 140px;" src="images/140X140.gif" data-holder-rendered="true">
-            <h3>Lorem ipsum</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          </div>--> 
-</div>
-
-<!--
+  <section>
+    <div class="container">
       <div class="row">
-        <div class="col-sm-12 mt-4 mb-2 text-center">
-          <h2>TESTIMONIALS</h2>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-6 col-lg-6">
-          <blockquote class="blockquote">
-            <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-            <small class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></small> </blockquote>
-        </div>
-        <div class="col-sm-6 col-lg-6">
-          <blockquote class="blockquote">
-            <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-            <small class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></small> </blockquote>
-        </div>
-        <div class="col-sm-6 col-lg-6">
-          <blockquote class="blockquote">
-            <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-            <small class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></small> </blockquote>
-        </div>
-        <div class="col-sm-6 col-lg-6">
-          <blockquote class="blockquote">
-            <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-            <small class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></small> </blockquote>
-        </div>
-      </div>
-    </div>
-    <div class="jumbotron">
-      <div class="container">
-        <div class="row">
-          <div class="text-center col-md-8 col-12 mx-auto">
-            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore, praesentium, autem, veritatis error quidem eos fuga atque asperiores magnam deleniti necessitatibus sequi</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-sm-4 col-auto mx-auto"> <a class="btn btn-block btn-lg btn-success" href="#" title="">Sign up now!</a> </div>
+        <div class="col-lg-12 mb-5 mt-5 text-left">
+          <h1 class="headerText">Favourites</h1>
         </div>
       </div>
     </div>
     <div class="container">
-      <div class="row">
-        <div class="col-12 mb-2 text-center">
-          <h2>OUR SERVICES</h2>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-6 col-lg-4">
-          <h3>Feature Description</h3>
-          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt impedit est voluptatem doloremque architecto corporis suscipit quidem ratione! Quis laborum nam optio dolorem doloremque ex nobis quibusdam ad quo dolores? </p>
-          <p><a class="btn btn-link" href="http://www.adobe.com">View details »</a></p>
-        </div>
-        <div class="col-sm-6 col-lg-4">
-          <h3>Feature Description</h3>
-          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate, illo, libero esse assumenda culpa consequatur exercitationem beatae odio praesentium nihil iste ipsum reiciendis pariatur. Recusandae, reiciendis quidem eaque aut ab. </p>
-          <p><a class="btn btn-link" href="http://www.adobe.com">View details »</a></p>
-        </div>
-        <div class="col-sm-6 col-lg-4">
-          <h3>Feature Description</h3>
-          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis, adipisci recusandae veniam laudantium distinctio temporibus eveniet dolorum earum iusto veritatis provident ducimus minima dolore quas vel omnis cumque voluptas quibusdam.</p>
-          <p><a class="btn btn-link" href="http://www.adobe.com">View details »</a></p>
-        </div>
-        <div class="col-sm-6 col-lg-4">
-          <h3>Feature Description</h3>
-          <p> <em class="icon-desktop "></em> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, earum rem nostrum provident repellat inventore laborum deleniti quas facere Quasi impedit autem qui cupiditate modi vero vitae dolorum nisi explicabo ea dolores animi. Inventore, omnis.</p>
-          <p><a class="btn btn-link" href="http://www.adobe.com">View details »</a></p>
-        </div>
-        <div class="col-sm-6 col-lg-4">
-          <h3>Feature Description</h3>
-          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique, iure, perspiciatis, ab ad quia animi esse repudiandae tempore quisquam dolorem sequi voluptatum qui fugiat. Quasi impedit autem qui cupiditate iusto?</p>
-          <p><a class="btn btn-link" href="http://www.adobe.com">View details »</a></p>
-        </div>
-        <div class="col-sm-6 col-lg-4">
-          <h3>Feature Description</h3>
-          <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia, aut, hic laudantium reprehenderit sapiente nemo consequatur corrupti accusantium! Hic, non rerum nihil reprehenderit excepturi explicabo error tempore aliquam eveniet odit.</p>
-          <p><a class="btn btn-link" href="http://www.adobe.com">View details »</a></p>
-        </div>
-      </div>
+      <div id="matchedCollectionView" class="row" style="display: none"></div>
     </div>
+    <footer>
+      <p>Copyright ©2018 Cloudy Dev. All rights reserved.</p>
+    </footer>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
+    <script src="js/jquery-3.2.1.min.js"></script> 
+    <!-- Include all compiled plugins (below), or include individual files as needed --> 
+    <script src="js/popper.min.js"></script> 
+    <script src="js/bootstrap-4.0.0.js"></script> 
+    <script src="scripts/favourites.js"></script> 
+    <script src="scripts/navigation.js"></script>
   </section>
-  <div class="container">
-    <div class="row">
-      <div class="col-12 col-md-8 mx-auto">
-        <div class="jumbotron">
-          <div class="row text-center">
-            <div class="text-center col-12">
-              <h2>Request a free quote</h2>
-            </div>
-            <div class="text-center col-12"> 
-              <!-- CONTACT FORM https://github.com/jonmbake/bootstrap3-contact-form --> 
-<!-- <form id="feedbackForm" class="text-center">
-                <div class="form-group">
-                  <label for="name">Name</label>
-                  <input type="text" class="form-control" id="name" name="name" placeholder="Name" aria-describedby="nameHelp">
-                  <span id="nameHelp" class="form-text text-muted" style="display: none;">Please enter your name.</span> </div>
-                <div class="form-group">
-                  <label for="email">E-Mail</label>
-                  <input type="email" class="form-control" id="email" name="email" placeholder="Email Address" aria-describedby="emailHelp">
-                  <span id="emailHelp" class="form-text text-muted" style="display: none;">Please enter a valid e-mail address.</span> </div>
-                <div class="form-group">
-                  <label for="message">Message</label>
-                  <textarea rows="10" cols="100" class="form-control" id="message" name="message" placeholder="Message" aria-describedby="messageHelp"></textarea>
-                  <span id="messageHelp" class="form-text text-muted" style="display: none;">Please enter a message.</span> </div>
-                <button type="submit" id="feedbackSubmit" class="btn btn-primary btn-lg"> Send</button>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
-<footer class="text-center">
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <p>Copyright ©2018 Cloudy Dev. All rights reserved.</p>
-      </div>
-    </div>
-  </div>
-</footer>
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
-<script src="js/jquery-3.2.1.min.js"></script> 
-<!-- Include all compiled plugins (below), or include individual files as needed --> 
-<script src="js/popper.min.js"></script> 
-<script src="js/bootstrap-4.0.0.js"></script> 
-<script src="scripts/favourites.js"></script> 
-<script src="scripts/navigation.js"></script>
-</section>
 </body>
 </html>
