Small change to documet titles before presentation

--- a/UniMeet/public/user_profile.html
+++ b/UniMeet/public/user_profile.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Untitled Document</title>
+<title>User Profile</title>
 
 <!-- FIREBASE -->
 <script src="/__/firebase/5.4.0/firebase-app.js"></script>
