--- a/UniMeet/public/matching.html
+++ b/UniMeet/public/matching.html
@@ -12,7 +12,7 @@
   <script src="/__/firebase/init.js"></script>
   <!-- FIREBASE -->
 
-  <title>uniMeet - Matching Portal</title>
+  <title>uniMeet</title>
 
   <!-- Bootstrap -->
   <link href="css/bootstrap-4.0.0.css" rel="stylesheet">
