--- a/UniMeet/public/user_profile.html
+++ b/UniMeet/public/user_profile.html
@@ -25,7 +25,7 @@
   <h2 id="universityOutput" class="profile_smallTitle">Bachelor of Information Technology</h2>
   
   <div class="shortcut_container"> 
-	  <button class="button equalWidths whiteBackground">Message</button>
+	  <button id="messageBtn" class="button equalWidths whiteBackground">Message</button>
 	  <button id="favouriteBtn" class="button equalWidths whiteBackground">Favourite</button>
 	  <button class="button equalWidths whiteBackground">More</button>
 	</div>
