Calculate, submit and display average ratings

--- a/UniMeet/public/user_profile.html
+++ b/UniMeet/public/user_profile.html
@@ -16,7 +16,7 @@
 	<link href="css/bootstrap-4.0.0.css" rel="stylesheet">
 	<link rel="stylesheet" href="styles/main.css">
 	<link rel="stylesheet" href="styles/user_profile.css">
-	<!-- Font Awesome Icon Library -->
+	<!-- Icon Library for Stars -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
@@ -55,6 +55,8 @@
 			<h3 id="mobile" class="bodyText">--</h3>
 
 			<h2 class="subHeader">Rate</h2>
+			<h3 class="table_title primaryColour">Average Rating:</h3>
+			<h3 id="averageRating" class="table_title primaryColour"></h3>
 			<div class="star-rating">
 			<input id="star-5" type="radio" name="rating" value=5>
 				<label for="star-5" title="5 stars">
