Changed all instances of 'Favorites' to 'Friends' along with a few small fixes/improvements

--- a/UniMeet/public/user_profile.html
+++ b/UniMeet/public/user_profile.html
@@ -27,9 +27,9 @@
 			<h1 id="profileNameLabel" class="profile_largeTitle"></h1>
 			<h2 id="universityOutput" class="profile_smallTitle">Bachelor of Information Technology</h2>
 
-			<div class="shortcut_container"> 
+			<div class="shortcut_container">
 				<button id="messageBtn" class="button equalWidths whiteBackground">Message</button>
-				<button id="favouriteBtn" class="button equalWidths whiteBackground">Favourite</button>
+				<button id="friendBtn" class="button equalWidths whiteBackground">Add Friend</button>
 				<button class="button equalWidths whiteBackground">More</button>
 			</div>
 		</div>
