--- a/UniMeet/public/friends.html
+++ b/UniMeet/public/friends.html
@@ -12,7 +12,7 @@
   <script src="/__/firebase/init.js"></script>
   <!-- FIREBASE -->
 
-  <title>Favourites</title>
+  <title>Friends</title>
 
   <!-- Bootstrap -->
   <link href="css/bootstrap-4.0.0.css" rel="stylesheet">
@@ -49,9 +49,9 @@
   <div class="nav_separator_Line"></div>
   <ul>
     <li><a href="/matching.html">My Matches</a></li>
-    <li><a href="/favourites.html">Favourites</a></li>
+    <li><a href="/friends.html">Friends</a></li>
     <li><a href="/messaging.html">Messages</a></li>
-    <li><a href="" id="logoutBtn">Logout</a></li>
+    <li><a href="" id="logoutBtn">Log Out</a></li>
   </ul>
 </nav>
 <section class="mainView">
@@ -59,7 +59,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 mb-5 mt-5 text-left">
-          <h1 class="headerText">Favourites</h1>
+          <h1 class="headerText">Friends</h1>
         </div>
       </div>
     </div>
@@ -74,7 +74,7 @@
     <!-- Include all compiled plugins (below), or include individual files as needed --> 
     <script src="js/popper.min.js"></script> 
     <script src="js/bootstrap-4.0.0.js"></script> 
-    <script src="scripts/favourites.js"></script> 
+    <script src="scripts/friends.js"></script> 
     <script src="scripts/navigation.js"></script>
   </section>
 </body>
