--- a/UniMeet/public/matching.html
+++ b/UniMeet/public/matching.html
@@ -49,9 +49,9 @@
   <div class="nav_separator_Line"></div>
   <ul>
     <li><a href="/matching.html">My Matches</a></li>
-    <li><a href="/favourites.html">Favourites</a></li>
+    <li><a href="/friends.html">Friends</a></li>
     <li><a href="/messaging.html">Messages</a></li>
-    <li><a href="" id="logoutBtn">Logout</a></li>
+    <li><a href="" id="logoutBtn">Log Out</a></li>
   </ul>
 </nav>
 <section class="mainView">
