profile layout nav bar

--- a/UniMeet/public/messaging.html
+++ b/UniMeet/public/messaging.html
@@ -106,6 +106,6 @@
 <script src="/__/firebase/5.4.0/firebase-messaging.js"></script>
 <script src="/__/firebase/init.js"></script>
 
-<script src="scripts/main.js"></script>
+<script src="scripts/googleMessages.js"></script>
 </body>
 </html>
