--- a/UniMeet/public/matching.html
+++ b/UniMeet/public/matching.html
@@ -2,9 +2,6 @@
 <html lang="en">
 
 <head>
-	
-
-	
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,7 +15,7 @@
 
   <title>uniMeet</title>
 	
-	<script src="scripts/main.js"></script>
+  <script src="scripts/main.js"></script>
 
   <!-- Bootstrap -->
   <link href="css/bootstrap-4.0.0.css" rel="stylesheet">
@@ -26,27 +23,21 @@
   <link href="styles/matching.css" rel="stylesheet">
 
 </head>
-
-<body>
-	
-<!--<div w3-include-html="navigation"></div>-->
-	
-<!--	<div id="include_once"></div>-->
-	
-	<nav class="navigationBar">
-  <div class="menuItems">
-      <a href="/matching.html">Recommendations</a>
-    <a href="/matching.html">My Matches</a>
-    <a href="/favourites.html">Favourites</a>
-    <a href="/messaging.html">Messages</a>
-    <a href="" id="logoutBtn">Logout</a>
-  </div>
-</nav>
-	
-	<div style="height: 64px"></div>
-        
-
     
+<header>
+<nav class="navigationBar">
+<img href="matching.html" alt="logo" class="logoPos" src="images/logo1.png">
+<div class="menuItems"> 
+    <a href="/matching.html">Matches</a> 
+    <a href="/favourites.html">Favourites</a> 
+    <a href="/messaging.html">Messages</a> 
+    <a href="" id="logoutBtn">Logout</a> 
+</div>
+</nav>
+</header>
+
+
+<body>  
 <!--<nav class="navbar navbar-expand-lg navbar-light bg-light"> <a class="navbar-brand" href="#">Navbar</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -86,7 +77,7 @@
   <section>
     <div class="container">
       <div class="row">
-        <div class="col-lg-12 mb-5 mt-5 text-left">
+          <div class="col-lg-12 mb-5 mt-5 text-left">
           <h1 class="headerText">My Matches</h1>
           <input type="button" class="refresh_button" id="refreshButton" value="Refresh" disabled>
         </div>
