Fix navigation link, error catching for firebase function

--- a/UniMeet/public/navigation.html
+++ b/UniMeet/public/navigation.html
@@ -20,9 +20,9 @@
   <div class="menuItems">
       <a href="/matching.html">Recommendations</a>
     <a href="/matching.html">My Matches</a>
-    <a href="/favourites.html">Favourites</a>
+    <a href="/friends.html">Friends</a>
     <a href="/messaging.html">Messages</a>
-    <a href="" id="logoutBtn">Logout</a>
+    <a href="" id="logoutBtn">Log Out</a>
   </div>
 </nav>
     
