Fixed firebase call, logo image and some broken links

--- a/UniMeet/public/user_profile.html
+++ b/UniMeet/public/user_profile.html
@@ -25,12 +25,12 @@
     
 <header>
 <nav class="navigationBar">
-<img alt="logo" class="logoPos" src="images/logo1.png">
+<a href="/"><img src="images/logo.png" class="logoPos" alt="uniMeet"></a>
 <div class="menuItems"> 
     <a href="/matching.html">Matches</a> 
-    <a href="/favourites.html">Favourites</a> 
+    <a href="/friends.html">Friends</a> 
     <a href="/messaging.html">Messages</a> 
-    <a href="" id="logoutBtn">Logout</a> 
+    <a href="" id="logoutBtn">Log Out</a> 
 </div>
 </nav>
 </header>
@@ -41,7 +41,7 @@
   <div class="backgroundColorView"></div>
   <div class="shortcut_container">
     <button id="messageBtn" class=" button shortcut_buttons">Message</button>
-    <button id="friendBtn" class=" button shortcut_buttons">Favourite</button>
+    <button id="friendBtn" class=" button shortcut_buttons">Add Friend</button>
     <button class="button shortcut_buttons">More</button>
   </div>
   <div class="avatar"> <img id="profilePicture" class="profilePicture"> </div>
