--- a/UniMeet/public/matching.html
+++ b/UniMeet/public/matching.html
@@ -26,12 +26,12 @@
     
 <header>
 <nav class="navigationBar">
-<img alt="logo" class="logoPos" src="images/logo1.png">
-<div class="menuItems"> 
+<a href="/"><img src="images/logo.png" class="logoPos" alt="uniMeet"></a>
+<div class="menuItems">
     <a href="/matching.html">Matches</a> 
-    <a href="/favourites.html">Favourites</a> 
+    <a href="/friends.html">Friends</a> 
     <a href="/messaging.html">Messages</a> 
-    <a href="" id="logoutBtn">Logout</a> 
+    <a href="" id="logoutBtn">Log Out</a> 
 </div>
 </nav>
 </header>
