Display rating only if users are/have been friends

--- a/UniMeet/public/user_profile.html
+++ b/UniMeet/public/user_profile.html
@@ -67,8 +67,8 @@
       <label for="1"> <i class="active fa fa-star" aria-hidden="true"></i> </label>
     </div>
 
-    <h3 class="table_title primaryColour">Your Rating</h3>
-    <div class="star-rating">
+    <h3 class="table_title primaryColour" id="yourRatingText" style="display: none;">Your Rating</h3>
+    <div class="star-rating" id="yourRating" style="display: none;">
       <input id="star-5" type="radio" name="rating" value=5>
       <label for="star-5" title="5 stars"> <i class="active fa fa-star" aria-hidden="true"></i> </label>
       <input id="star-4" type="radio" name="rating" value=4>
